Bug 1888202 Don't automatically throw away drag data when trying to get some other flavors; r=stransky

Since we clear the mTargetDragData in the GetTargetDragData the calling it for the
application/vnd.portal.files and later just to find out if they are present clears already
obtained mTargetDragData which could contain actual text/plain;utf8 and not file uri data
which should be later used.

Differential Revision: https://phabricator.services.mozilla.com/D206760